src/tests/fixtures/input_types/InputTypeReturnedFromField.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  /** @GQLField */
  hello: string;
}

/** @GQLType */
class MyType {
  /** @GQLField */
  someField(): MyInputType;
}

/** @GQLInput */
type MyInputType = {
  someField: MyType;
};

-----------------
OUTPUT
-----------------
Error: The type of MyType.someField must be Output Type but got: MyInputType.:
 --> src/tests/fixtures/input_types/InputTypeReturnedFromField.invalid.ts:10:16

   |   /** @GQLField */
10 |   someField(): MyInputType;
   |                ^ 
   | }
